--- a/www/index.html
+++ b/www/index.html
@@ -55,6 +55,7 @@
         -webkit-user-select: none;
         user-select: none;
     }
+
     header h1 {
         
     }
@@ -74,6 +75,7 @@
         grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
         grid-gap: 15px;
     }
+
     ul#files > li {
         display: flex;
         flex-direction: column;
@@ -99,12 +101,39 @@
         background: transparent;
     }
 
+    #action-sibling {
+        position: fixed;
+        bottom: 0px;
+        left: 0px;
+        right: 0px;
+        height: 42px;
+        background: transparent;
+        transition: height 0.25s ease-in-out;
+        color: black;
+        /*
+        pointer-events: none;
+        */
+    }
+
     #action-wrapper.open {
         height: 200px;
         background: rgba(240,240,240, 0.9);
     }
 
-    #action-wrapper input#action {
+    #action-wrapper.open ~ #action-sibling {
+        height: 200px;
+    }
+
+    #action-wrapper.open ~ #action-sibling {
+    }
+
+    /*
+    #action-sibling {
+        z-index: 1;
+    }
+    */
+
+    #action-wrapper input#dummy-action {
         height: 32px;
         position: absolute;
         bottom: 5px;
@@ -113,18 +142,41 @@
         text-align: center;
     }
 
-    #action-wrapper ul#actions {
-        position: absolute;
-        top: 32px;
-        left: 0;
-        right: 0;
-        z-index: -1;
+    #action-wrapper ~ input#action {
+        height: 34px;
+        position: fixed;
+        bottom: 5px;
+        left: 120px;
+        right: 120px;
+        text-align: center;
+        z-index: 1000;
+        background: transparent;
+        border: none;
+        outline: none;
+        -webkit-appearance: none;
+    }
+
+
+    #action-wrapper ~ #action-sibling ul#actions,
+    #action-wrapper ~ #action-sibling ul#conversation {
+        z-index: 100;
         transition: margin 0.4s ease-out, color 0.4s ease-in;
         color: rgba(0,0,0,0);
     }
 
-    #action-wrapper.open ul#actions {
+    #action-wrapper ~ #action-sibling .overflow-wrapper {
+        display: block;
+        width: 100vw;
+        height: 150px;
+        overflow-y: auto;
+        z-index: 1000;
+    }
+
+    #action-wrapper.open.actions ~ #action-sibling ul#actions,
+    #action-wrapper.open.conversation ~ #action-sibling ul#conversation {
+        /*
         margin-top: -32px;
+        */
         color: rgba(0,0,0,1);
     }
 
@@ -139,6 +191,7 @@
         border-top-left-radius: 4px;
         border: 1px solid rgb(193, 193, 193);
         color: rgb(42, 42, 42);
+        z-index: 1001;
     }
 
     #action-wrapper ~ #action-submit {
@@ -152,6 +205,52 @@
         border-top-right-radius: 4px;
         border: 1px solid rgb(193, 193, 193);
         color: rgb(42, 42, 42);
+        z-index: 1001;
+    }
+
+    #conversation {
+        display: flex;
+        flex-direction: column;
+    }
+
+    #conversation li {
+        margin-bottom: 10px;
+        max-width: 420px;
+        background: white;
+        border-radius: 10px;
+        margin: 0;
+        line-height: 30px;
+        padding: 0 10px;
+    }
+
+    #conversation li.ai {
+        align-self: flex-end;
+    }
+
+    #conversation.locked li.ai {
+        min-width: 310px;
+    }
+
+    #conversation.locked li.ai.lock p:after {
+        overflow: hidden;
+        display: inline-block;
+        vertical-align: bottom;
+        -webkit-animation: ellipsis steps(4,end) 900ms infinite;      
+        animation: ellipsis steps(4,end) 900ms infinite;
+        content: "\2026"; /* ascii code for the ellipsis character */
+        width: 0px;
+    }
+
+    @keyframes ellipsis {
+        to {
+            width: 1.25em;    
+        }
+    }
+
+    @-webkit-keyframes ellipsis {
+        to {
+            width: 1.25em;    
+        }
     }
 </style>
 <body>
@@ -165,18 +264,25 @@
     </ul>
 
     <div id="action-wrapper">
-        <input type="text" id="action" />
-
-        <ul id="actions">
-
-        </ul>
+        <input type="text" id="dummy-action" />
     </div>
 
-    <button
-        id="action-suggestions"
-        onclick="this.previousElementSibling.classList.toggle('open')">Suggestions</button>
+    <input type="text" id="action" />
 
+    <button id="action-suggestions">Suggestions</button>
     <button id="action-submit">Conversation</button>
+
+    <div id="action-sibling">
+        <div class="overflow-wrapper">
+            <ul id="actions">
+
+            </ul>
+
+            <ul id="conversation">
+                
+            </ul>
+        </div>
+    </div>
 
     <script>
         let rpc = {
@@ -195,10 +301,9 @@
             const input = e.target.closest('input');
             if (!input) return;
 
-            rpc.invoke({
-                cmd: 'communicate',
-                message: input.value
-            })
+            const message = input.value;
+
+            addConversationItem('user', message);
         })
 
         document.getElementById('files').addEventListener('click', e => {
@@ -212,9 +317,17 @@
             if (!li) return;
         });
 
-        window.onload = () => {
-            rpc.invoke({ cmd : 'init' });
-        };
+        document.getElementById('action-suggestions').addEventListener('click', e => {
+            document.getElementById('action-wrapper').classList.add('open', 'actions');
+            document.getElementById('action-wrapper').classList.remove('conversation');
+        });
+
+        document.getElementById('action-submit').addEventListener('click', e => {
+            const message = document.getElementById('action').value;
+            if (!message) return;
+
+            addConversationItem('user', message);
+        });
 
         window.setFolder = ({ path, files }) => {
             document.getElementById('files').innerHTML = '';
@@ -242,7 +355,7 @@
             }
         };
 
-        window.setDescription = ({ path, actions }) => {
+        window.setSuggestions = ({ path, actions }) => {
             document.getElementById('actions').innerHTML = '';
 
             for (const action of actions) {
@@ -259,20 +372,58 @@
 
                 li.append(details);
 
-                details.addEventListener("click", detailsAnimationOpen.bind(details, details));
-                details.addEventListener("animationend", detailsAnimationEnd.bind(details, details));
+                details.addEventListener('click', detailsAnimationOpen.bind(details, details));
+                details.addEventListener('animationend', detailsAnimationEnd.bind(details, details));
                 document.getElementById('actions').append(li);
             }
         };
 
-        function relayMessage(cmd) {
-            if (window.external !== undefined) {
-                return window.external.invoke(cmd);
-            } else if (window.webkit.messageHandlers.external !== undefined) {
-                return window.webkit.messageHandlers.external.postMessage(cmd);
+        window.addConversationItem = (from, message, codeblock) => {
+            const conversation = document.getElementById('conversation');
+
+            if (from === 'user' && conversation.classList.contains('locked')) {
+                return;
             }
-            throw new Error('Failed to locate webkit external handler')
-        }
+
+            if (from === 'user') {
+                rpc.invoke({ cmd: 'communicate', message });
+            }
+
+            if (from === 'ai' && conversation.classList.contains('locked')) {
+                conversation.classList.remove('locked');
+                conversation.querySelector('li.lock').remove();
+            }
+
+            const li = document.createElement('li');
+            const p = document.createElement('p');
+
+            p.textContent = message;
+            li.className = from;
+            li.append(p);
+
+            if (codeblock) {
+                const pre = document.createElement('pre');
+                const code = document.createElement('code');
+
+                code.append(pre);
+                pre.textContent = codeblock;
+                li.append(code);
+            }
+
+            conversation.append(li);
+            document.getElementById('action-wrapper').classList.add('open', 'conversation');
+            document.getElementById('action-wrapper').classList.remove('actions');
+
+            if (from === 'user') {
+                document.getElementById('action').value = '';
+
+                const item = addConversationItem('ai', 'Hold on a second while I process this');
+                item.classList.add('lock');
+                conversation.classList.add('locked');
+            }
+
+            return li;
+        };
 
         function detailsAnimationOpen(details, e) {
             if (details.hasAttribute("open")) {
@@ -287,6 +438,7 @@
                 details.classList.remove("closing");
             }
         }
+
         document.addEventListener('mousedown', (e) => {
             if (e.target.classList.contains('titlebar') && e.buttons === 1) {
                 rpc.invoke({ cmd: 'window', window: 'drag' });
