--- a/www/index.html
+++ b/www/index.html
@@ -42,10 +42,14 @@
 
     html {
         margin: 0;
+        --primary-bg: rgba(26, 25, 25, 1);
+        --primary-bg-semi-transparent: rgba(26, 25, 25, 0.7);
     }
 
     body {
         --window-drop-shadow-margin: 10px;
+        --header-compressed-height: 20px;
+        --header-large-height: 48px;
 
         height: 100%;
         overflow: hidden;
@@ -53,7 +57,7 @@
     }
 
     body > main {
-        background: #1a1919;
+        background: var(--primary-bg);
         color: antiquewhite;
         width: 100%;
         height: 100%;
@@ -67,20 +71,38 @@
     }
 
     header {
+        position: fixed;
+        left: var(--window-drop-shadow-margin);
+        right: var(--window-drop-shadow-margin);
         display: grid;
         padding: 5px;
-        grid-template-columns: 80px 1fr 1fr;
-        grid-template-rows: 46px;
+        grid-template-columns: 80px 48px 1fr 80px;
+        grid-template-rows: var(--header-height);
         -webkit-user-select: none;
         user-select: none;
+        transition: all 0.2s ease-in-out;
+        border-top-right-radius: 10px;
+        border-top-left-radius: 10px;
+
+        --header-height: 48px;
+    }
+
+    header.compressed {
+        --header-height: var(--header-compressed-height);
+        background: var(--primary-bg-semi-transparent);
+        /*
+        -webkit-backdrop-filter: blur(8px);
+        backdrop-filter: blur(8px);
+        */
     }
 
     header .menu {
         background-image: url("icon://open-menu-symbolic?size=32");
         background-repeat: no-repeat;
         background-position: center;
-        width: 42px;
-        height: 42px;
+        width: 48px;
+        height: var(--header-height);
+        transition: height 0.2s ease-in-out;
     }
 
     header .menu .content {
@@ -162,7 +184,43 @@
         display: none;
     }
 
-    h1 { font-size: 18px; }
+    header .controls {
+        display: flex;
+        justify-content: flex-end;
+        align-items: center;
+        padding-right: 10px;
+    }
+
+    header .controls img {
+        width: 24px;
+        height: 24px;
+        cursor: pointer;
+    }
+
+    header h1 {
+        margin: 0;
+        font-size: 16px;
+        text-align: center;
+        transition: all 0.2s ease-in-out;
+        line-height: var(--header-height);
+    }
+
+    header.compressed h1 {
+        font-size: 13px;
+    }
+
+    header button#back {
+        position: fixed;
+        left: calc(var(--window-drop-shadow-margin) + 10px);
+        top: calc(var(--window-drop-shadow-margin) + 10px);
+        height: 36px;
+        width: 80px;
+    }
+
+    header.compressed button#back {
+        opacity: 0;
+    }
+
     h2 { font-size: 14px; }
 
     ul { padding: 0; margin: 10px; list-style-type: none; }
@@ -170,8 +228,8 @@
     .files-wrapper {
         flex: 1;
         overflow-y: auto;
-        min-height: calc(100vh - 56px - 38px);
-        max-height: calc(100vh - 56px - 38px);
+        min-height: calc(100vh - 38px);
+        max-height: calc(100vh - 38px);
     }
 
     .spacer {
@@ -184,7 +242,8 @@
         display: grid;
         grid-template-columns: repeat(auto-fit, minmax(var(--grid-size), 1fr));
         grid-gap: 30px;
-        margin-bottom: 30px;
+        margin-bottom: var(--header-large-height);
+        margin-top: var(--header-large-height);
     }
 
     ul#files > li {
@@ -370,43 +429,50 @@
 </style>
 <body>
     <main>
-        <header>
+        <header id="header">
+            <div></div>
             <button id="back">Back</button>
-            <h1 id="folder" class="titlebar"></h1>
-            <div>
-                <div class="menu"
-                    onclick="event.target.matches('.tap-area, .menu') && this.firstElementChild.classList.toggle('showing')">
-                    <div class="content">
-                        <form>
-                            <h2>Scale</h2>
-                            <input class="grid-scale" type="range" min=0 max=1 value=0.4 step=0.01
-                                oninput="future.settings.gridScale = this.value" />
 
-                            <h2>Sort</h2>
+            <div class="menu"
+                onclick="event.target.matches('.tap-area, .menu') && this.firstElementChild.classList.toggle('showing')">
+                <div class="content">
+                    <form>
+                        <h2>Scale</h2>
+                        <input class="grid-scale" type="range" min=0 max=1 value=0.4 step=0.01
+                            oninput="future.settings.gridScale = this.value" />
 
-                            <fieldset id="sort"
-                                onchange="future.settings.sort = this.querySelector(':checked').value">
-                                <input type="radio" name="sort" value="a-z" />
-                                <input type="radio" name="sort" value="z-a" />
-                                <input type="radio" name="sort" value="date" />
-                            </fieldset>
+                        <h2>Sort</h2>
 
-                            <label>
-                                <input id="sort_folders_first" type="checkbox" name="folders_first"
-                                    onchange="future.settings.sortFoldersFirst = this.checked" />
-                                Folders first
-                            </label>
+                        <fieldset id="sort"
+                            onchange="future.settings.sort = this.querySelector(':checked').value">
+                            <input type="radio" name="sort" value="a-z" />
+                            <input type="radio" name="sort" value="z-a" />
+                            <input type="radio" name="sort" value="date" />
+                        </fieldset>
 
-                            <label>
-                                <input id="sort_show_hidden" type="checkbox" name="show_hidden"
-                                    onchange="future.settings.sortShowHidden = this.checked" />
-                                Show hidden
-                            </label>
-                        </form>
-                    </div>
+                        <label>
+                            <input id="sort_folders_first" type="checkbox" name="folders_first"
+                                onchange="future.settings.sortFoldersFirst = this.checked" />
+                            Folders first
+                        </label>
 
-                    <div class="tap-area" aria-hidden=true></div>
+                        <label>
+                            <input id="sort_show_hidden" type="checkbox" name="show_hidden"
+                                onchange="future.settings.sortShowHidden = this.checked" />
+                            Show hidden
+                        </label>
+                    </form>
                 </div>
+
+                <div class="tap-area" aria-hidden=true></div>
+            </div>
+
+            <h1 id="folder" class="titlebar"></h1>
+
+            <div class="controls">
+                <img src="icon://window-minimize-symbolic?size=32" alt="minimize application" />
+                <img src="icon://window-maximize-symbolic?size=32" alt="maximize application" />
+                <img src="icon://window-close-symbolic?size=32" alt="close application" />
             </div>
         </header>
 
@@ -642,6 +708,18 @@
                 details.classList.remove("closing");
             }
         }
+
+        document.querySelector('.files-wrapper').addEventListener('scroll', e => {
+            const offset = e.target.scrollTop;
+
+            if (offset > 30) {
+                header.classList.add('compressed');
+                //header.style.setProperty('--header-height', '--header-height-comp');
+            } else {
+                header.classList.remove('compressed');
+                //header.style.setProperty('--header-height', '20px');
+            }
+        });
 
         document.addEventListener('mousedown', (e) => {
             if (e.target.classList.contains('titlebar') && e.buttons === 1) {
