--- a/www/index.html
+++ b/www/index.html
@@ -322,12 +322,29 @@
         padding-right: 120px;
         text-align: center;
         z-index: 1000;
-        background: rgba(250,250,250,0.8);
+        background:
+            radial-gradient(circle,
+                rgba(255,255,255,0.74) 0%,
+                rgba(255,255,255,0.76) 25%,
+                rgba(255,255,255,0.83) 50%,
+                rgba(255,255,255,0.88) 75%,
+                rgba(255,255,255,0.92) 100%),
+
+            linear-gradient(0deg,
+                rgba(255,255,255,0) 0%,
+                rgba(255,255,255,0.25) 75%,
+                rgba(255,255,255,0.6) 100%),
+
+            linear-gradient(180deg,
+                rgba(255,255,255,0) 0%,
+                rgba(255,255,255,0.25) 75%,
+                rgba(255,255,255,0.6) 100%);
+
         border: 0.1px solid rebeccapurple;
         border-radius: 4px;
         outline: none;
         -webkit-appearance: none;
-        -webkit-backdrop-filter: blur(8px);
+        -webkit-backdrop-filter: blur(8px) saturate(500%);
     }
 
     #action-sibling {
