--- a/www/index.html
+++ b/www/index.html
@@ -292,7 +292,7 @@
         bottom: calc(4px + var(--window-drop-shadow-margin));
         left: var(--window-drop-shadow-margin);
         right: var(--window-drop-shadow-margin);
-        height: 42px;
+        height: 38px;
         opacity: 0.7;
         padding-left: 12px;
         -webkit-backdrop-filter: blur(8px);
@@ -808,7 +808,7 @@
                     break;
                 }
                 default: {
-                    if (!e.target.closest('input#action')) {
+                    if (!e.target.closest('input#action') && !e.target.closest('h1#folder')) {
                         const action = document.getElementById('action');
                         action.focus();
                     }
