--- a/www/index.html
+++ b/www/index.html
@@ -275,6 +275,11 @@
         flex-direction: column;
         max-height: calc(var(--grid-size) - 20px);
         padding-bottom: 4px;
+        transition: filter 0.15s ease-in-out;
+    }
+
+    ul#files > li:hover {
+        filter: brightness(117%);
     }
 
     ul#files > li > .image {
